--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -118,6 +118,11 @@
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
 {% endif %}
+      
+       <div style="width: 150px; margin: 0 auto">
+        <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=Od6bPdYoaAquGoT6F4mULwC7W6DSrq7tT-8VCSeUumI"></script>
+      </div>
+      
     </ul>
   </div>
 </div>
